--- a/Leitner System Transfered 2/View/Training.xaml
+++ b/Leitner System Transfered 2/View/Training.xaml
@@ -7,7 +7,7 @@
       xmlns:viewmodel="clr-namespace:Leitner_System_Transfered_2.ViewModel"
       mc:Ignorable="d" 
       d:DesignHeight="450" d:DesignWidth="800"
-      Title="Training">
+      Title="Training" Focusable="False" KeyDown="trainingPage_KeyDown" MouseDown="trainingPage_MouseDown" >
 
     <Page.Resources>
         <BooleanToVisibilityConverter x:Key="visibilityConverter"/>
