--- a/Leitner System Transfered 2/View/Training.xaml
+++ b/Leitner System Transfered 2/View/Training.xaml
@@ -233,7 +233,7 @@
                 </MultiTrigger>
             </Style.Triggers>
         </Style>
-
+        <viewmodel:ResultToIntegerConverter x:Key="resultToIntegerConverter"/>
     </Page.Resources>
     <Page.CommandBindings>
         <CommandBinding x:Name="Save" Command="ApplicationCommands.Save" CanExecute="Save_CanExecute" Executed="Save_Executed"/>
@@ -289,11 +289,11 @@
                                             <ColumnDefinition Width="1*"/>
                                         </Grid.ColumnDefinitions>
                                         <TextBlock Text="{Binding Name}" HorizontalAlignment="Left" Grid.Column="0"/>
-                                        <ComboBox x:Name="resultOfCard" SelectedIndex="{Binding Result, Mode=TwoWay}" Style="{DynamicResource ComboBoxStyle1}" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="70" MinHeight="20" Width="20" Height="13">
-                                            <ComboBoxItem Content="Нет ответа" Style="{DynamicResource ComboBoxItemStyle1}"/>
-                                            <ComboBoxItem Content="Верно"  Style="{DynamicResource ComboBoxItemStyle1}"/>
-                                            <ComboBoxItem Content="Неверно"  Style="{DynamicResource ComboBoxItemStyle1}"/>
-                                            <ComboBoxItem Content="Карта удалена"  Style="{DynamicResource ComboBoxItemStyle1}"/>
+                                        <ComboBox x:Name="resultOfCard" SelectedIndex="{Binding Result, Mode=TwoWay, Converter={StaticResource resultToIntegerConverter}}" Style="{DynamicResource ComboBoxStyle1}" Grid.Column="1" VerticalAlignment="Center" HorizontalAlignment="Right" MinWidth="70" MinHeight="20" Width="20" Height="13">
+                                            <ComboBoxItem Content="No answer" Style="{DynamicResource ComboBoxItemStyle1}"/>
+                                            <ComboBoxItem Content="Right"  Style="{DynamicResource ComboBoxItemStyle1}"/>
+                                            <ComboBoxItem Content="Wrong"  Style="{DynamicResource ComboBoxItemStyle1}"/>
+                                            <ComboBoxItem Content="Card is removed"  Style="{DynamicResource ComboBoxItemStyle1}"/>
                                         </ComboBox>
                                     </Grid>
                                 </DataTemplate>
